--- a/Viva Decora/Podfile
+++ b/Viva Decora/Podfile
@@ -4,7 +4,7 @@
 target 'Viva Decora' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
-
+  pod 'AFNetworking', '~> 3.0'
   # Pods for Viva Decora
 
 end
